--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: '3'
 services:
   web:
     build: .
+    container_name: dataserver
     ports:
-      - "5000:5000"
+      - "3000:3000"
     volumes:
       - .:/code
